--- a/01-hola-mundo/src/app/app.component.html
+++ b/01-hola-mundo/src/app/app.component.html
@@ -1,7 +1,8 @@
-<h1>Hola Mundo</h1>
+<app-header></app-header>
 
-<ul>
-  <li>Nombre: {{ nombre }}</li>
-  <li>Apellido: {{ apellido }}</li>
-  <li>Genero: {{ genero }}</li>
-</ul>
+<div class="container m-5">
+
+    <app-body></app-body>
+</div>
+
+<app-footer></app-footer>
