--- a/02-spa/src/app/components/about/about.component.html
+++ b/02-spa/src/app/components/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works!</p>
+<h1 class="animated fadeIn fast">Sobre Comic App</h1>
+<hr>
+<p class="animated fadeIn">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio reiciendis sequi aut, eum, eius iure sint rem saepe aperiam illo repellendus ducimus quasi corporis vero quo dolorem hic asperiores aliquam.
+    
+</p>
