Final aplicación heroes

--- a/02-spa/src/styles.css
+++ b/02-spa/src/styles.css
@@ -6,6 +6,9 @@ body {
     margin-top: 20px;
 }
 
+.img-logo {
+    width: 100px;
+}
 .animated {
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
